--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,34 +104,47 @@ jobs:
           cache: maven
       
   e2e-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v4
 
-      - name: Start backend
-        run: |
-          nohup mvn spring-boot:run &
-          sleep 20 # espera a que levante
+    - name: Install Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 18
 
-      - name: Run Cypress
-        run: npx cypress run --reporter json --reporter-options output=results.json
+    - name: Install dependencies
+      run: npm ci
 
-      - name: Publish summary
-        run: |
-          total=$(jq '.stats.tests' results.json)
-          passed=$(jq '.stats.passes' results.json)
-          failed=$(jq '.stats.failures' results.json)
+    - name: Start backend
+      run: |
+        nohup mvn spring-boot:run > backend.log 2>&1 &
+        sleep 20
 
-          echo "## 🧪 Cypress Test Results" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "| Total | Passed | Failed |" >> $GITHUB_STEP_SUMMARY
-          echo "|-------|--------|--------|" >> $GITHUB_STEP_SUMMARY
-          echo "| $total | $passed ✅ | $failed ❌ |" >> $GITHUB_STEP_SUMMARY
+    - name: Run Cypress
+      run: npx cypress run --reporter json --reporter-options output=results.json
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: cypress-results
-          path: results.json
+    - name: Publish summary
+      run: |
+        total=$(jq '.stats.tests' results.json)
+        passed=$(jq '.stats.passes' results.json)
+        failed=$(jq '.stats.failures' results.json)
 
+        echo "## 🧪 Cypress Test Results" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "| Total | Passed | Failed |" >> $GITHUB_STEP_SUMMARY
+        echo "|-------|--------|--------|" >> $GITHUB_STEP_SUMMARY
+        echo "| $total | $passed ✅ | $failed ❌ |" >> $GITHUB_STEP_SUMMARY
 
+    - name: Upload Cypress results
+      uses: actions/upload-artifact@v4
+      with:
+        name: cypress-results
+        path: results.json
+
+    - name: Upload backend logs (on failure)
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: backend-logs
+        path: backend.log
