--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,48 +103,56 @@ jobs:
           java-version: '17'
           cache: maven
       
+  name: E2E Tests
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+
+jobs:
   e2e-tests:
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v4
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-    - name: Install Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 18
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
 
-    - name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Start backend
-      run: |
-        nohup mvn spring-boot:run > backend.log 2>&1 &
-        sleep 20
+      - name: Start backend
+        run: |
+          nohup mvn spring-boot:run > backend.log 2>&1 &
+          sleep 20
 
-    - name: Run Cypress
-      run: npx cypress run --reporter json --reporter-options output=results.json
+      - name: Run Cypress
+        run: npx cypress run --reporter json --reporter-options output=results.json
 
-    - name: Publish summary
-      run: |
-        total=$(jq '.stats.tests' results.json)
-        passed=$(jq '.stats.passes' results.json)
-        failed=$(jq '.stats.failures' results.json)
+      - name: Publish summary
+        run: |
+          total=$(jq '.stats.tests' results.json)
+          passed=$(jq '.stats.passes' results.json)
+          failed=$(jq '.stats.failures' results.json)
 
-        echo "## 🧪 Cypress Test Results" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "| Total | Passed | Failed |" >> $GITHUB_STEP_SUMMARY
-        echo "|-------|--------|--------|" >> $GITHUB_STEP_SUMMARY
-        echo "| $total | $passed ✅ | $failed ❌ |" >> $GITHUB_STEP_SUMMARY
+          echo "## 🧪 Cypress Test Results" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Total | Passed | Failed |" >> $GITHUB_STEP_SUMMARY
+          echo "|-------|--------|--------|" >> $GITHUB_STEP_SUMMARY
+          echo "| $total | $passed ✅ | $failed ❌ |" >> $GITHUB_STEP_SUMMARY
 
-    - name: Upload Cypress results
-      uses: actions/upload-artifact@v4
-      with:
-        name: cypress-results
-        path: results.json
+      - name: Upload Cypress results
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-results
+          path: results.json
 
-    - name: Upload backend logs (on failure)
-      if: failure()
-      uses: actions/upload-artifact@v4
-      with:
-        name: backend-logs
-        path: backend.log
+      - name: Upload backend logs (on failure)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-logs
+          path: backend.log
