--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,7 +115,132 @@ jobs:
           done
           curl -s http://localhost:8080/actuator/health || (echo "❌ Backend no inició" && exit 1)
 
-         
+      - name: Prepare k6 scripts
+        run: |
+          mkdir -p tests/k6 out/k6
+          chmod 777 out/k6
+          
+          # SMOKE
+          cat > tests/k6/smoke.js <<'JS'
+          import http from 'k6/http';
+          import { check, sleep } from 'k6';
+          export const options = { vus: 1, duration: '10s' };
+          const BASE = __ENV.API_BASE;
+          export default function () {
+            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
+            check(r, { "status 200": x => x.status === 200 });
+            sleep(1);
+          }
+          JS
+          
+          # STRESS
+          cat > tests/k6/stress.js <<'JS'
+          import http from 'k6/http';
+          import { check } from 'k6';
+          export const options = {
+            stages: [
+              { duration: '20s', target: 20 },
+              { duration: '20s', target: 50 },
+              { duration: '20s', target: 100 },
+              { duration: '20s', target: 0 },
+            ],
+          };
+          const BASE = __ENV.API_BASE;
+          export default function () {
+            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
+            check(r, { "status 200": x => x.status === 200 });
+          }
+          JS
+          
+          # SOAK
+          cat > tests/k6/soak.js <<'JS'
+          import http from 'k6/http';
+          import { check, sleep } from 'k6';
+          export const options = { vus: 10, duration: '2m' };
+          const BASE = __ENV.API_BASE;
+          export default function () {
+            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
+            check(r, { "status 200": x => x.status === 200 });
+            sleep(1);
+          }
+          JS
+          
+          # SPIKE
+          cat > tests/k6/spike.js <<'JS'
+          import http from 'k6/http';
+          import { check } from 'k6';
+          export const options = {
+            stages: [
+              { duration: '5s', target: 5 },
+              { duration: '5s', target: 200 },
+              { duration: '10s', target: 5 },
+              { duration: '5s', target: 0 },
+            ],
+          };
+          const BASE = __ENV.API_BASE;
+          export default function () {
+            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
+            check(r, { "status 200": x => x.status === 200 });
+          }
+          JS
+
+
+      - name: Run k6 (Docker)
+        run: |
+          mkdir -p out/k6
+          chmod 777 out/k6
+          for script in tests/k6/*.js; do
+            name=$(basename "$script" .js)
+            echo "▶️ Ejecutando $name"
+            docker run --rm --network host -e API_BASE=${API_BASE} \
+              -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 \
+              run /scripts/$name.js --summary-export=/out/$name.json || \
+              echo '{"metrics":{}}' > out/k6/$name.json
+          done
+
+      - name: Subir artefactos k6
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: k6-summaries
+          path: out/k6/*.json
+
+      - name: Resumen k6
+        if: always()
+        run: |
+          sudo apt-get update && sudo apt-get install -y jq >/dev/null
+          echo "## 📈 k6 Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Test | Requests | p95 (ms) | Fail rate |" >> $GITHUB_STEP_SUMMARY
+          echo "|------|---------:|---------:|----------:|" >> $GITHUB_STEP_SUMMARY
+          
+          totalReqs=0
+          totalFail=0
+          allP95=()
+          
+          for f in out/k6/*.json; do
+            tag=$(basename "$f" .json)
+            reqs=$(jq '.metrics.http_reqs.count // 0' "$f")
+            p95=$(jq '.metrics.http_req_duration["p(95)"] // 0' "$f")
+            fail=$(jq '.metrics.http_req_failed.rate // 0' "$f")
+          
+            totalReqs=$((totalReqs + reqs))
+            # acumulo fallas estimadas
+            failCount=$(echo "$reqs * $fail" | bc -l | awk '{printf "%d", $1}')
+            totalFail=$((totalFail + failCount))
+            allP95+=($p95)
+          
+            printf "| %s | %s | %.2f | %.4f |\n" "$tag" "$reqs" "$p95" "$fail" >> $GITHUB_STEP_SUMMARY
+          done
+          
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Totales" >> $GITHUB_STEP_SUMMARY
+          globalFailRate=$(echo "$totalFail / $totalReqs" | bc -l)
+          avgP95=$(printf "%.2f" $(echo "${allP95[@]}" | awk '{s=0; for(i=1;i<=NF;i++) s+=$i; print s/NF}'))
+          printf "| Total Requests | Avg p95 (ms) | Global Fail rate |\n" >> $GITHUB_STEP_SUMMARY
+          printf "|---------------:|-------------:|-----------------:|\n" >> $GITHUB_STEP_SUMMARY
+          printf "| %s | %s | %.4f |\n" "$totalReqs" "$avgP95" "$globalFailRate" >> $GITHUB_STEP_SUMMARY
+  
 
   e2e-tests:
     name: Cypress E2E
@@ -171,12 +296,15 @@ jobs:
       - name: Install node-fetch (fix Cypress config)
         run: npm install node-fetch@2
 
-      - name: Run Cypress
+      - name: Run Cypress tests
         run: |
-          npx cypress run --reporter json --reporter-options output=results.json | tee cypress.log
-          tail -n 50 cypress.log >> $GITHUB_STEP_SUMMARY
+          mkdir -p out/cypress
+          npx cypress run \
+            --env API_BASE=http://localhost:8080 \
+            --reporter json \
+            --reporter-options "output=out/cypress/results.json,overwrite=true" \
+            || true
 
-  
 
       - name: Debug Cypress output
         if: always()
