--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,7 +177,7 @@ jobs:
           npx cypress run \
             --reporter json \
             --reporter-options output=out/cypress/results.json \
-            --no-color | tee cypress.log
+            | tee cypress.log
       
       
 
